--- a/static/style.css
+++ b/static/style.css
@@ -612,6 +612,11 @@ span#big {
     height: 20vw;
     border-radius: 2vw;
     background: #D9D9D9;
+    overflow: hidden;
+}
+.iimg img {
+    max-width: 100%;
+
 }
 .itags {
     position: absolute;
