--- a/static/style.css
+++ b/static/style.css
@@ -615,8 +615,8 @@ span#big {
     overflow: hidden;
 }
 .iimg img {
-    max-width: 100%;
-
+    width: 100%;
+    height: 100%
 }
 .itags {
     position: absolute;
