--- a/templates/interpreter.html
+++ b/templates/interpreter.html
@@ -66,7 +66,7 @@
             .then(data => {
                 document.getElementsByClassName('interpretation')[0].style.animation = "up 500ms forwards"
                 document.getElementsByClassName('itag')[0].innerHTML = "#" + data.tags[0];
-                document.getElementsByClassName('idesc').innerHTML = data.interpretation;
+                document.getElementsByClassName('idesc')[0].innerHTML = data.interpretation;
                 document.getElementById('iimg').src = data.image_path;
                 document.getElementById('iimg').style.display = 'block';
             })
