--- a/templates/library.html
+++ b/templates/library.html
@@ -23,30 +23,19 @@
     </div>
     <script src="../static/index.js"></script>
     <script>
-        var xhr = new XMLHttpRequest();
-        xhr.open("GET", "../static/library", true);
-        xhr.responseType = 'document';
-        xhr.onload = () => {
-        if (xhr.status === 200) {
-            var elements = xhr.response.getElementsByTagName("a");
-            for (x of elements) {
-            if ( x.href.match(/\.(jpe?g|png|gif)$/) ) { 
-                let img = document.createElement("img");
-                img.src = x.href;
-                let el = 
-                `
-                <div class = "libraryitem"></div>
-                `
-                document.getElementsByClassName('librarygrid')[0].insertAdjacentHTML('beforeend', el);
-                document.getElementsByClassName('librarygrid')[0].lastElementChild.append(img)
-            } 
-            };
-        } 
-        else {
-            alert('Request failed. Returned status of ' + xhr.status);
-        }
-        }
-        xhr.send()
+        fetch('/list-images')
+        .then(response => response.json())
+        .then(images => {
+            const grid = document.getElementsByClassName('librarygrid')[0];
+            images.forEach(path => {
+                const img = document.createElement("img");
+                img.src = "/static/" + path;
+                const el = document.createElement("div");
+                el.className = "libraryitem";
+                el.appendChild(img);
+                grid.appendChild(el);
+            });
+        })
     </script>
 </body>
 </html>
