--- a/templates/explore.html
+++ b/templates/explore.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body style="background:#0D0D0D">
-    <div class="menu">
+   <div class="menu">
         <div class="menu-items">
-            <div class="menu-item"></div>
+            <a class="menu-item" href ="./">Synthari</a>
             <a class="menu-item" href = "./interpreter">Interpreter</a>
             <a class="menu-item" href = "./museum">Museum</a>
             <a class="menu-item" href = "./library">Library</a>
@@ -19,7 +19,7 @@
     <div class="banner">
         <p>Explore</p>
     </div>
-    <div class="roll">CHOOSE ANY ONE OR ROLL IT</div>
+    <div class="roll">ROLL IT</div>
     <div class="rollimgs">
         <div class="rollimg"></div>
         <div class="rollimg"></div>
