--- a/templates/library.html
+++ b/templates/library.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-        <div class="menu">
+    <div class="menu">
         <div class="menu-items">
-            <div class="menu-item"></div>
+            <a class="menu-item" href ="./">Synthari</a>
             <a class="menu-item" href = "./interpreter">Interpreter</a>
             <a class="menu-item" href = "./museum">Museum</a>
             <a class="menu-item" href = "./library">Library</a>
             <a class="menu-item" href = "./explore">Explore</a>
         </div>
+    </div>
     </div>
     <div class="libraryhero">
         <p>LIBRARY</p>
