--- a/templates/museum.html
+++ b/templates/museum.html
@@ -11,7 +11,7 @@
 <body>
    <div class="menu">
         <div class="menu-items">
-            <div class="menu-item"></div>
+            <a class="menu-item" href ="./">Synthari</a>
             <a class="menu-item" href = "./interpreter">Interpreter</a>
             <a class="menu-item" href = "./museum">Museum</a>
             <a class="menu-item" href = "./library">Library</a>
@@ -67,14 +67,38 @@
     </div>
     <div class="collections">
         <div class="collection">
-            <div class="collitem"><p>OLD REGIME</p></div>
-            <div class="collitem"><p>INDUSTRIAL REVOLUTION</p></div>
-            <div class="collitem"><p>ARCHEOLOGICAL COLLECTION</p></div>
-            <div class="collitem"><p>DIGITAL ART [AI PROMPTED]</p></div>
-            <div class="collitem"><p>LIBRARY OF BAROQUE ERA</p></div>
-            <div class="collitem"><p>MEDIEVAL PRESENCE</p></div>
-            <div class="collitem"><p>LIFE SCIENCE ARCHIEVE</p></div>
-            <div class="collitem"><p>COLLECTION OF SURREALISM</p></div>
+            <div class="collitem">
+                <p>OLD REGIME</p>
+                <img src="../static/imgs/oldregime.png" alt="">
+            </div>
+            <div class="collitem">
+                <p>INDUSTRIAL REVOLUTION</p>
+                <img src="../static/imgs/industrial.png" alt="">
+            </div>
+            <div class="collitem">
+                <p>ARCHEOLOGICAL COLLECTION</p>
+                <img src="../static/imgs/archeological.png" alt="">
+            </div>
+            <div class="collitem">
+                <p>DIGITAL ART [AI PROMPTED]</p>
+                <img src="../static/imgs/digital.png" alt="">
+            </div>
+            <div class="collitem">
+                <p>LIBRARY OF BAROQUE ERA</p>
+                <img src="../static/imgs/baroque.png" alt="">
+            </div>
+            <div class="collitem">
+                <p>Y2K AND RETRO STYLE</p>
+                <img src="../static/imgs/y2k.png" alt="">
+            </div>
+            <div class="collitem">
+                <p>LIFE SCIENCE ARCHIEVE</p>
+                <img src="../static/imgs/lifescience.png" alt="">
+            </div>
+            <div class="collitem">
+                <p>COLLECTION OF SURREALISM</p>
+                <img src="../static/imgs/surrealism.png" alt="">
+            </div>
         </div>
     </div>
     <div class="museums">
