--- a/templates/interpreter.html
+++ b/templates/interpreter.html
@@ -6,7 +6,7 @@
     <title>AI in Art & Culture</title>
     <link rel="stylesheet" href="../static/style.css">
 </head>
-<body style="background:#000000">
+<body style="background:#000000;overflow:hidden">
      <div class="menu">
         <div class="menu-items">
             <a class="menu-item" href ="./">Synthari</a>
