--- a/templates/museum.html
+++ b/templates/museum.html
@@ -68,35 +68,35 @@
     <div class="collections">
         <div class="collection">
             <div class="collitem">
-                <p>OLD REGIME</p>
+                <a target = "_blank" href = "https://www.google.com/search?sca_esv=ce3263ccc9bab162&sxsrf=AE3TifOa6jIcIpFp2VGXDfdn5Ypg03VMaA:1751277669495&q=old+regime+painting+collection&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeioyp3OhN11EY0n5qfq-zENwnGygERInUV_0g0XKeHGJRAdFPaX_SSIJt7xYUfpm-_vQHq3hzHA2DKyn4_QBnQmzJzRbbjOPw1BvHSgNexNCWYY3W1po7cj-turW4QANz87mzlbnYh0yzluxEnlslmki5VQphgTLwzF5rw5S350lSej9Rw&sa=X&ved=2ahUKEwjGypLb8ZiOAxVkfGwGHaLaNUIQtKgLKAF6BAgUEAE&biw=1280&bih=595&dpr=1.5">OLD REGIME</a>
                 <img src="../static/imgs/oldregime.png" alt="">
             </div>
             <div class="collitem">
-                <p>INDUSTRIAL REVOLUTION</p>
+                <a target = "_blank" href = "https://www.google.com/search?sca_esv=ce3263ccc9bab162&biw=1280&bih=595&sxsrf=AE3TifNY2jYZxXiRW6VB1VezYSwc8ZoCOw:1751277724445&q=industrial+revolution+painting+collection&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeioyp3OhN11EY0n5qfq-zEMNIp8LUgCyfMBh3p2QSOgg7QLMukbBusrotrgjdXeBaBI20KGIIBsKf-COTXvcmp_MO7Z4n-8yBC1gDRqa_Qjq36DesohkRyv-CRR_VdTum-5sFddpZIGdu2rWOxfw7QaCFTSltb3AMD0RDK9FpitIA-mKVQ&sa=X&ved=2ahUKEwjTtKz18ZiOAxV5R2wGHbfeMhkQtKgLKAF6BAgREAE">INDUSTRIAL REVOLUTION</a>
                 <img src="../static/imgs/industrial.png" alt="">
             </div>
             <div class="collitem">
-                <p>ARCHEOLOGICAL COLLECTION</p>
+                <a target="_blank" href = "https://www.google.com/search?sca_esv=ce3263ccc9bab162&biw=1280&bih=595&sxsrf=AE3TifNokQ_rMI-kdsiv3oYbFdHAdu1B0Q:1751277825969&q=archeological+painting+collection&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeioyp3OhN11EY0n5qfq-zEMNIp8LUgCyfMBh3p2QSOggxv6lFg9ssfgcRmf1yRKNDx58HqE6cfaRv7eVpG_UiEeW2bS9ODiqrkDhx0vZPBfacdNnpEBbH5QOCCQANFO6kF2k-VUIq77HXNhDBmFR5y327KBviDllpl46jTO1coGm6rkEhQ&sa=X&ved=2ahUKEwibhOGl8piOAxUNfWwGHVv_DdcQtKgLKAF6BAgPEAE">ARCHEOLOGICAL COLLECTION</a>
                 <img src="../static/imgs/archeological.png" alt="">
             </div>
             <div class="collitem">
-                <p>DIGITAL ART [AI PROMPTED]</p>
+                <a target="_blank" href = "https://www.google.com/search?sca_esv=ce3263ccc9bab162&biw=1280&bih=595&sxsrf=AE3TifOSkqlplTqfx07PY4hbFQ_VGL1jDw:1751277857144&q=digital+art+painting+collection&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeioyp3OhN11EY0n5qfq-zENyQuF3_WaPI4Qgb6AZzy-eW4Iylpe544k0tQNJ-bxHSRfOs5pdBcFg3Gpr2F3ET_1bKkmmGmdsYnLsYWbt_iX0IMIJSt47ziZFzXmNBNwZA8eYKNYM24H743YhGN2ZXc-3iubURbWp__kUiWSNw9ToJ7jU7g&sa=X&ved=2ahUKEwiS5c-08piOAxUhZmwGHVo-HR8QtKgLKAF6BAgREAE">DIGITAL ART [AI PROMPTED]</a>
                 <img src="../static/imgs/digital.png" alt="">
             </div>
             <div class="collitem">
-                <p>LIBRARY OF BAROQUE ERA</p>
+                <a target="_blank" href="https://www.google.com/search?sca_esv=ce3263ccc9bab162&biw=1280&bih=595&sxsrf=AE3TifNkvsz_RFIVHcNMwa3CV_tx0_eemw:1751277918940&q=baroque+era+painting+collection&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeioyp3OhN11EY0n5qfq-zEMzuQRQtDnOcgd0wUd10tNAmVEmPmJT85udYE296vp4VlbX4ZywOBLRtfHC91wkcv3wyL3n4X_r6v2wvoacPmIEZ1MzC279FUOwDK4sEC8k4Ue7WnXH2JI4dTVqPmQND4b5DJmuWAW_NUDX3--VzhrhpUKfVw&sa=X&ved=2ahUKEwjau4vS8piOAxVxa2wGHRfzDr4QtKgLKAF6BAgREAE">LIBRARY OF BAROQUE ERA</a>
                 <img src="../static/imgs/baroque.png" alt="">
             </div>
             <div class="collitem">
-                <p>Y2K AND RETRO STYLE</p>
+                <a target="_blank" href = "https://www.google.com/search?sca_esv=ce3263ccc9bab162&biw=1280&bih=595&sxsrf=AE3TifN-T7WtQ6LVTfmiztUe1L-d2JIZiA:1751277937127&q=y2k+and+retro+style+painting+collection&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeioyp3OhN11EY0n5qfq-zENyQuF3_WaPI4Qgb6AZzy-eW4Iylpe544k0tQNJ-bxHSRfOs5pdBcFg3Gpr2F3ET_1bKkmmGmdsYnLsYWbt_iX0IMIJSt47ziZFzXmNBNwZA8eYKNYM24H743YhGN2ZXc-3iubURbWp__kUiWSNw9ToJ7jU7g&sa=X&ved=2ahUKEwjBxuHa8piOAxUIUGcHHRSKGzsQtKgLKAF6BAgTEAE">Y2K AND RETRO STYLE</a>
                 <img src="../static/imgs/y2k.png" alt="">
             </div>
             <div class="collitem">
-                <p>LIFE SCIENCE ARCHIEVE</p>
+                <a target="_blank" href = "https://www.google.com/search?sca_esv=ce3263ccc9bab162&biw=1280&bih=595&sxsrf=AE3TifPJrWfFl6JmlA8IEM3zCQnRi8ZFsg:1751277960159&q=life+science+archive+painting+collection&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeioyp3OhN11EY0n5qfq-zENUeDAUwcREhgvEEei7euJ0qoqwf5Sk3D8GcFLwc-PWTz-NFm8rfTblVMWrQYq7dd7ui2SseuAkXuwowEgvVzB5V3Boqs1MbIIXOhOw9oU00anl-bIFhRMBi_cwA-n7gwGeYzA7-jTmS1fyF3NSL-FFNI9lhQ&sa=X&ved=2ahUKEwjwk9_l8piOAxVRU2wGHReEJvQQtKgLKAF6BAgTEAE">LIFE SCIENCE ARCHIEVE</a>
                 <img src="../static/imgs/lifescience.png" alt="">
             </div>
             <div class="collitem">
-                <p>COLLECTION OF SURREALISM</p>
+                <a target="_blank" href = "https://www.google.com/search?sca_esv=ce3263ccc9bab162&biw=1280&bih=595&sxsrf=AE3TifONLhPTsf0Vp8FiZbXSyxf7vBZ2Rg:1751277976566&q=surrealism+painting+collection&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeioyp3OhN11EY0n5qfq-zENyQuF3_WaPI4Qgb6AZzy-eW4Iylpe544k0tQNJ-bxHSRfOs5pdBcFg3Gpr2F3ET_1bKkmmGmdsYnLsYWbt_iX0IMIJSt47ziZFzXmNBNwZA8eYKNYM24H743YhGN2ZXc-3iubURbWp__kUiWSNw9ToJ7jU7g&sa=X&ved=2ahUKEwj8x8jt8piOAxV9TGwGHWRFB5AQtKgLKAF6BAgREAE">COLLECTION OF SURREALISM</a>
                 <img src="../static/imgs/surrealism.png" alt="">
             </div>
         </div>
